@@ -5,9 +5,11 @@
     This is executed only once at startup.
 
 """
-from south.signals import post_migrate
+from south.signals import pre_migrate, post_migrate
 from django.conf import settings
-from django.db.models.signals import post_syncdb
+from django.db import connection
+from django.db.models.signals import pre_syncdb, post_syncdb
+from django.core.exceptions import ImproperlyConfigured
 
 from mapentity.helpers import api_bbox
 
@@ -31,11 +33,26 @@ def run_initial_sql_post_syncdb(sender, **kwargs):
     load_sql_files(app_label)
 
 
+def check_srid_has_meter_unit(sender, **kwargs):
+    if not hasattr(check_srid_has_meter_unit, '_checked'):
+        cursor = connection.cursor()
+        cursor.execute("""
+            SELECT * FROM spatial_ref_sys
+            WHERE srtext ILIKE '%%meter%%' AND srid=%s;""", [settings.SRID])
+        results = cursor.fetchall()
+        if len(results) == 0:
+            err_msg = 'Unit of SRID EPSG:%s is not meter.' % settings.SRID
+            raise ImproperlyConfigured(err_msg)
+    check_srid_has_meter_unit._checked = True
+
+
 if settings.TEST and not settings.SOUTH_TESTS_MIGRATE:
+    pre_syncdb.connect(check_srid_has_meter_unit, dispatch_uid="geotrek.core.checksrid")
     post_syncdb.connect(run_initial_sql_post_syncdb, dispatch_uid="geotrek.core.sqlautoload")
     # During tests, the signal is received twice unfortunately
     # https://code.djangoproject.com/ticket/17977
 else:
+    pre_migrate.connect(check_srid_has_meter_unit, dispatch_uid="geotrek.core.checksrid")
     post_migrate.connect(run_initial_sql_post_migrate, dispatch_uid="geotrek.core.sqlautoload")
 
 
